<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_sign_up_activity">SignUp</string>
    <string name="signup">Welcome to Registration Page</string>
    <string name="userName">userName:</string>
    <string name="email">email:</string>
    <string name="mnumber">mNumber:</string>
    <string name="password">password:</string>
    <string name="button">signup</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_page">SignUpApi</string>
    <string name="homepage">HOMEPAGE</string>
    <string name="button1">signin</string>
    <string name="button2">create an account</string>
    <string name="welcometologinpage">WELCOME TO LOGINPAGE</string>
    <string name="username">UserName:</string>
    <string name="password1">Password:</string>
    <string name="signupsuccess">signup successful.............</string>
    <string name="title_activity_login_api">LoginApi</string>
    <string name="loginsucess">LoginSucessful................</string>
    <string name="title_activity_sign_up_success">SignUpSuccess</string>
    <string name="loginbutton">clickhere to login</string>
    <string name="Login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="register">create account</string>
    <string name="forgotpassword">forgotpassword?</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="emailconfirmation">emailconfirmation</string>
    <string name="pleaseEnterYourEmail">PleaseEnterYourEmail:</string>
    <string name="getpassword">GetYourPasswordByYourMail</string>
    <string name="title_activity_password_recovery">PasswordRecovery</string>
    <string name="passwordRcovery">passwordRcoveryScreen</string>
    <string name="oldpassword">OldPassword:</string>
    <string name="newpassword">NewPassword:</string>
    <string name="LoginButtonPass">Login</string>
    <string name="title_activity_home_screen_api">HomeScreenApi</string>
    <string name="homescreen">GoToHomeScreen</string>
    <string name="welcomehome">WelcomeToHomeScreen</string>
    <string name="title_activity_offers_api">OffersApi</string>
    <string name="updatesucuess">UpdateSucuess.....</string>
    <string name="images">Images</string>
    <string name="offersAPI">offersAPI</string>
    <string name="title_activity_update_offers_api">UpdateOffersApi</string>
    <string name="updateoffersapi">UpdateOffersApi</string>
    <string name="title_activity_update_offers_sucuess">UpdateOffersSucuess</string>
    <string name="title_activity_gold_api">GoldApi</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_diamond_api">DiamondApi</string>
    <string name="title_activity_silver_api">SilverApi</string>
    <string name="title_activity_platinum_api">PlatinumApi</string>
    <string name="title_activity_carousel">CarouselActivity</string>
    <string name="jewellerystore">jewellery shop</string>

</resources>