<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mod"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.signupapi.LoginActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginsucess" />

    <TextView
        android:id="@+id/goldApi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/offersview1"
        android:layout_below="@+id/updateoffersapi"
        android:layout_marginTop="23dp"
        android:text="GoldApi" />

    <TextView
        android:id="@+id/homeview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/homescreen" />

    <TextView
        android:id="@+id/updateoffersapi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/offersview1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="UpdateOffersApi" />

    <TextView
        android:id="@+id/offersview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homeview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/offersAPI" />

</RelativeLayout>